syntax = "proto3";

option go_package = ".;protobuf";

// Router: assigns shards to replication groups.
//
// RPC interface:
// Join(servers) -- add a set of groups (gid -> server-list mapping).
// Leave(gids) -- delete a set of groups.
// Query(num) -> fetch Config # num, or latest config if num==-1.
//
// A Config (configuration) describes a set of replica groups, and the
// replica group responsible for each shard. Configs are numbered. Config
// #0 is the initial configuration, with no groups and all shards
// assigned to group 0 (the invalid group).
service Router {
    rpc Query (QueryRequest) returns (QueryReply);
    rpc Join (JoinRequest) returns (JoinReply);
    rpc Leave (LeaveRequest) returns (LeaveReply);
}

message Servers {
    repeated string servers = 1;
}

message ClusterConfigWrapper {
    int32 config_id = 1;
    repeated int32 shards_map = 2;
    map<int32, Servers> replica_groups = 3;
}

message QueryRequest {
    int32 config_id = 1;
}

message JoinRequest {
    map<int32, Servers> replica_groups = 1;
}

message LeaveRequest {
    repeated int32 group_ids = 1;
}

enum ErrCode {
    ERR_CODE_OK = 0;
    ERR_CODE_WRONG_LEADER = 1;
    ERR_CODE_INVALID_ARGUMENT = 2;
}

message QueryReply {
    ClusterConfigWrapper config_wrapper = 1;
    ErrCode err_code = 2;
    string err_message = 3;
}

message JoinReply {
    ErrCode err_code = 1;
    string err_message = 2;
}

message LeaveReply {
    ErrCode err_code = 1;
    string err_message = 2;
}

